Fix text-align user setting
Forcing value of var instead of inherit to make sure it is applied in all conditions. Resolves #128

--- a/css/src/modules/user-settings-submodules/ReadiumCSS-textAlign_pref.css
+++ b/css/src/modules/user-settings-submodules/ReadiumCSS-textAlign_pref.css
@@ -13,24 +13,8 @@
 :root:--advanced-settings[style*="--USER__textAlign"] body,
 :root:--advanced-settings[style*="--USER__textAlign"] *:not(blockquote):not(figcaption) p,
 :root:--advanced-settings[style*="--USER__textAlign"] li {
-  text-align: inherit !important;
+  text-align: var(--USER__textAlign) !important;
   -moz-text-align-last: auto !important;
   -epub-text-align-last: auto !important;
   text-align-last: auto !important;
-}
-
-/* In case something goes wrong at the programmatic level + rtl for body + rtl in ltr */
-
-:root:--advanced-settings:--rtl[style*="--USER__textAlign: left"],
-:root:--advanced-settings:--rtl[style*="--USER__textAlign:left"],
-:root:--advanced-settings[style*="--USER__textAlign: left"] *:--rtl,
-:root:--advanced-settings[style*="--USER__textAlign:left"] *:--rtl {
-  text-align: right;
-}
-
-/* Edge, if logical value is used, think of it as a polyfill. For LTR, it will fall back to the default, which is left */
-
-:root:--advanced-settings:--rtl[style*="--USER__textAlign: start"],
-:root:--advanced-settings:--rtl[style*="--USER__textAlign:start"] {
-  text-align: right;
 }
